Use more efficient Boolean.valueOf